<resources>
    <string name="app_name">OkeWash Admin &amp; Employee</string>

    <!-- Strings for MainActivity -->
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_listofemployee">List of Employee</string>

    <!-- Strings for HomeFragment -->
    <string name="open_bill_label">Buka bill baru</string>

    <!-- Strings for EmployeeListFragment -->
    <string name="NewEmployee_btn">Add new employee</string>

    <!-- Strings for NewEmpployeeActivity-->
    <string name="NewEmployee_form">Create New Employee</string>
    <string name="back_btn_description">Back</string>

    <!-- Strings for Login form -->
    <string name="app_logo">logo</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login_btn">Login</string>
    <string name="email_input_placeholder">Enter your Email</string>
    <string name="password_input_placeholder">Enter your Password</string>

    <!-- Strings for EmployeeActivity -->

    <!-- Strings for Active Laundry List CardView -->
    <string name="billID_placeholder">20210218001</string>
    <string name="update_date_placeholder">Last update:\n18–02–2021 14:42 PM</string>
    <string name="status_placeholder">Status: Mulai</string>
    <string name="info_btn_label">Info</string>

    <!-- Strings for LaundryDetailView -->
    <string name="laundrydetailview_title">Detail view</string>
    <string name="pic_placeholder">Grace</string>
    <string name="customerName_placeholder">John Doe</string>
    <string name="customerPhone_placeholder">12345</string>
    <string name="totalWeight_placeholder">Total Weight: 10kg</string>
    <string name="paymentMethod_placeholder">Payment Method:\nGrabPay</string>
    <string name="totalPrice_placeholder">Total: Rp50,000.00</string>
    <string name="additional_label_placeholder">Additional Items</string>
    <string name="update_btn_label">Update</string>
    <string name="item_name">Name</string>
    <string name="item_qty">xqty</string>
    <string name="pic_id_label">osjnrbsobr</string>
    <string name="paket_choice_label">Pilihan paket:</string>
    <string name="total_qty_label">Total Qty: 0</string>

    <!-- Strings for OpenNewBillActivity -->
    <string name="confirm_btn_label">Confirm</string>
    <string name="customerName_tv">Customer Name:</string>
    <string name="phoneNumber_tv">Phone Number:</string>
    <string name="totalWeight_tv">Total Weight:</string>
    <string name="totalQuantity_tv">Total quantity:</string>
    <string name="additional_item_button">Additional Item ImageButton</string>
    <string name="additional_item_tv">Additional Item</string>
    <string name="item_type_tv">Item Type</string>
    <string name="item_qty_tv">Item Qty</string>
    <string name="total_price_tv">Total Harga:</string>
    <string name="totalPrice_placeholder_tv">Rp0,000.00</string>
    <string name="name_hint">Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="qty_hint">Qty</string>
    <string name="weight_hint">Weight</string>
    <string name="additional_cancel_placeholder">Additional cancel</string>
    <string name="additional_other_placeholder">Other</string>
    <string name="payment_method_label">Payment Method:</string>
    <string name="other_price_placeholder">Rp0,000.00</string>
    <string name="total_price_lot_tv_label">Total Harga Lot:</string>
    <string name="total_price_additionalItem_tv_label">Total Harga Tambahan:</string>
    <string name="check_btn_label">Cek total Harga</string>

</resources>