<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_grey"
        app:layout_constraintEnd_toStartOf="@+id/additional_qty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/item_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </FrameLayout>


    <EditText
        android:id="@+id/additional_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:autofillHints="0"
        android:background="@drawable/round_grey"
        android:ems="3"
        android:hint="@string/qty_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/additional_item_cancel_btn"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/additional_item_cancel_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/additional_cancel_placeholder"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/additional_other_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_grey"
        android:hint="@string/additional_other_placeholder"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:padding="8dp"
        android:visibility="invisible"
        android:autofillHints="Other"
        app:layout_constraintEnd_toStartOf="@+id/additional_price"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/additional_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalPrice_placeholder_tv"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/additional_other_input"
        app:layout_constraintEnd_toEndOf="@+id/additional_qty"
        app:layout_constraintTop_toTopOf="@+id/additional_other_input" />

    <EditText
        android:id="@+id/additional_other_price_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="0"
        android:background="@drawable/round_grey"
        android:hint="@string/other_price_placeholder"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/additional_other_input"
        app:layout_constraintStart_toStartOf="@+id/additional_other_input"
        app:layout_constraintTop_toBottomOf="@+id/additional_other_input" />






</androidx.constraintlayout.widget.ConstraintLayout>